FileUtils is correct for jdk 8 now